--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,11 @@ android {
 
 //librerias terceros
 def glide_version = "4.13.2"
+def retrofit_version = "2.9.0"
+def lifecycle_version = "2.5.1"
+def coroutines_version = "1.6.4"
+def activity_version = "1.6.1"
+def fragment_version = "1.5.5"
 
 //librerias default
 def androidx_core_version = "1.9.0"
@@ -54,6 +59,27 @@ dependencies {
     // Glide
     implementation "com.github.bumptech.glide:glide:$glide_version"
     annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
+
+    // ViewModel (Permite utilizar scopes en los view models)
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+
+    // Live Data (Permite utilizar live data con view model, corutinas, etc)
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+
+    // Kotlin Activity (Accede a complementos para kotlin)
+    implementation "androidx.activity:activity-ktx:$activity_version"
+
+    // Kotlin Fragment (Accede a complementos para kotlin)
+    implementation "androidx.fragment:fragment-ktx:$fragment_version"
+
+    // Retrofit (Permite utilizar retrofit)
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+
+    // Gson Retrofit (Permite utilizar gson con retrofit)
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+
+    // Coroutines (Permite utilizar corutinas)
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
