--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ def coroutines_version = "1.6.4"
 def activity_version = "1.6.1"
 def fragment_version = "1.5.5"
 def room_version = "2.4.3"
+def mockk_version = "1.13.5"
 
 //librerias default
 def androidx_core_version = "1.9.0"
@@ -89,7 +90,11 @@ dependencies {
     // Kotlin Room (Permite utilizar corutinas con room)
     implementation("androidx.room:room-ktx:$room_version")
 
+    // Junit (Permite hacer pruebas unitarias de codigo)
     testImplementation 'junit:junit:4.13.2'
+    // Mockk (Permite hacer pruebas de pantallas)
+    testImplementation "io.mockk:mockk:$mockk_version"
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
